; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output-pnm.c_pnm_write_band.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_output-pnm.c_pnm_write_band.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32* }

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"pixmap must be grayscale or rgb to write as pnm\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, i32, i32, i32, i8*)* @pnm_write_band to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pnm_write_band(i32* %0, %struct.TYPE_3__* %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 3
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %13, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  store i32 %25, i32* %14, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %15, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  store i32 %31, i32* %16, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %11, align 4
  %34 = add nsw i32 %32, %33
  store i32 %34, i32* %18, align 4
  %35 = load i32, i32* %16, align 4
  %36 = icmp ne i32 %35, 1
  br i1 %36, label %37, label %44

37:                                               ; preds = %6
  %38 = load i32, i32* %16, align 4
  %39 = icmp ne i32 %38, 3
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i32*, i32** %7, align 8
  %42 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %43 = call i32 @fz_throw(i32* %41, i32 %42, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %44

44:                                               ; preds = %40, %37, %6
  %45 = load i32*, i32** %13, align 8
  %46 = icmp ne i32* %45, null
  br i1 %46, label %48, label %47

47:                                               ; preds = %44
  br label %105

48:                                               ; preds = %44
  %49 = load i32, i32* %18, align 4
  %50 = load i32, i32* %15, align 4
  %51 = icmp sgt i32 %49, %50
  br i1 %51, label %52, label %54

52:                                               ; preds = %48
  %53 = load i32, i32* %15, align 4
  store i32 %53, i32* %18, align 4
  br label %54

54:                                               ; preds = %52, %48
  %55 = load i32, i32* %10, align 4
  %56 = load i32, i32* %18, align 4
  %57 = sub nsw i32 %56, %55
  store i32 %57, i32* %18, align 4
  br label %58

58:                                               ; preds = %96, %54
  %59 = load i32, i32* %18, align 4
  %60 = add nsw i32 %59, -1
  store i32 %60, i32* %18, align 4
  %61 = icmp ne i32 %59, 0
  br i1 %61, label %62, label %105

62:                                               ; preds = %58
  %63 = load i32, i32* %14, align 4
  store i32 %63, i32* %17, align 4
  br label %64

64:                                               ; preds = %92, %62
  %65 = load i32, i32* %17, align 4
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %96

67:                                               ; preds = %64
  %68 = load i32, i32* %17, align 4
  store i32 %68, i32* %19, align 4
  %69 = load i32, i32* %16, align 4
  switch i32 %69, label %92 [
    i32 1, label %70
    i32 3, label %80
  ]

70:                                               ; preds = %67
  %71 = load i32*, i32** %7, align 8
  %72 = load i32*, i32** %13, align 8
  %73 = load i8*, i8** %12, align 8
  %74 = load i32, i32* %19, align 4
  %75 = call i32 @fz_write_data(i32* %71, i32* %72, i8* %73, i32 %74)
  %76 = load i32, i32* %19, align 4
  %77 = load i8*, i8** %12, align 8
  %78 = sext i32 %76 to i64
  %79 = getelementptr inbounds i8, i8* %77, i64 %78
  store i8* %79, i8** %12, align 8
  br label %92

80:                                               ; preds = %67
  %81 = load i32*, i32** %7, align 8
  %82 = load i32*, i32** %13, align 8
  %83 = load i8*, i8** %12, align 8
  %84 = load i32, i32* %19, align 4
  %85 = mul nsw i32 %84, 3
  %86 = call i32 @fz_write_data(i32* %81, i32* %82, i8* %83, i32 %85)
  %87 = load i32, i32* %19, align 4
  %88 = mul nsw i32 %87, 3
  %89 = load i8*, i8** %12, align 8
  %90 = sext i32 %88 to i64
  %91 = getelementptr inbounds i8, i8* %89, i64 %90
  store i8* %91, i8** %12, align 8
  br label %92

92:                                               ; preds = %67, %80, %70
  %93 = load i32, i32* %19, align 4
  %94 = load i32, i32* %17, align 4
  %95 = sub nsw i32 %94, %93
  store i32 %95, i32* %17, align 4
  br label %64

96:                                               ; preds = %64
  %97 = load i32, i32* %9, align 4
  %98 = load i32, i32* %14, align 4
  %99 = load i32, i32* %16, align 4
  %100 = mul nsw i32 %98, %99
  %101 = sub nsw i32 %97, %100
  %102 = load i8*, i8** %12, align 8
  %103 = sext i32 %101 to i64
  %104 = getelementptr inbounds i8, i8* %102, i64 %103
  store i8* %104, i8** %12, align 8
  br label %58

105:                                              ; preds = %47, %58
  ret void
}

declare dso_local i32 @fz_throw(i32*, i32, i8*) #1

declare dso_local i32 @fz_write_data(i32*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
